<resources>
    <string name="app_name">first release</string>
    <string name="add_item">add subject  </string>
    <string name="add_item_submit"> send   </string>
    <string name="add_item_name">name   </string>
    <string name="add_item_nick_name">real name  </string>
    <string name="add_item_group_id">group name </string>
    <string name="view_items">view item  </string>
    <string name="back_main">back  </string>
    <string name="driver_name">driver name </string>
    <string name="change_language">change language to arabic</string>
    <string name="car_number">change language to arabic</string>
    <string name="mobile_driver">change language to arabic</string>
    <string name="charge_cost">change language to arabic</string>
    <string name="charge_date">change language to arabic</string>
    <string name="order_details">charge details</string>
    <string name="make_order">make order</string>
      <string name="cheese">الحديثة</string>
    <string name="meat">اللاردن</string>
    <string name="send_message">ارسال الرسالة</string>
    <string name="number_of_car">عدد السيارات </string>
    <string name="SEND_MESSAGE">ارسال رسالة</string>
    <string name="decleration">decleration</string>
    <string name="case_wight">case_wight</string>
    <string name="send_message_nasib">send message nasib</string>
    <string name="company_name">company name</string>
    <string name="car_rentall">car rental</string>
    <string name="price">price</string>
    <string name="costumes_decleration">costumes decleration</string>
    <string name="bag_weight">bag_weight</string>
    <string name="save_sitting">save_sitting</string>
    <string name="save_new_group">save new group</string>


</resources>
