<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.add_order">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <EditText
            android:id="@+id/driver_name"
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:ems="10"
            android:hint="@string/driver_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/car_number"
            android:layout_width="match_parent"

            android:layout_height="106dp"
            android:layout_weight="1"
            android:ems="10"

            android:hint="@string/car_number"
            android:inputType="number" />

        <EditText
            android:id="@+id/driver_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/mobile_driver"
            android:inputType="phone" />

        <EditText
            android:id="@+id/charge_cost"
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:layout_weight="1"
            android:ems="8"

            android:hint="@string/charge_cost"
            android:inputType="number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="381dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back_main"
                android:onClick="back_main"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/send_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#0043E615"
                android:onClick="send_order"
                android:text="@string/add_item_submit"
                tools:ignore="MissingConstraints,OnClick" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>