<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.add_item">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:ems="10"
            android:hint="@string/add_item_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/nick_name"
            android:layout_width="match_parent"

            android:layout_height="106dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/add_item_nick_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/group_name"
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:layout_weight="1"
            android:ems="8"
            android:hint="@string/add_item_group_id"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="381dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back_main"
                android:onClick="back_main"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#0043E615"
                android:onClick="db_save"
                android:text="@string/add_item_submit"
                tools:ignore="MissingConstraints,OnClick" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>