<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <LinearLayout
        android:layout_width="257dp"
        android:layout_height="331dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/add_item_button"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:onClick="add_item"
            android:text="@string/add_item"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/language_button"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:onClick="change_language"
            android:text="@string/change_language"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.673"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/make_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="make_order"
            android:text="@string/make_order"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/item_view_button"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginBottom="444dp"
            android:onClick="view_item"
            android:text="@string/view_items"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.538"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="OnClick" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
